feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -91,9 +91,345 @@ public interface SerialNoFormatter {
 ```
 
 #### 流水号生成器分类
+定义所有的生成器类型常量类：
+```
+public class GeneratorType {
+    public static final String UUID = "UUID";
+    public static final String NANO_TIME = "NANO_TIME";
+    public static final String DEFAULT = "DEFAULT";
+    public static final String WITH_DATE_Y_CYCLE_BY_Y = "WITH_DATE_Y_CYCLE_BY_Y";
+    public static final String WITH_DATE_YM_CYCLE_BY_Y = "WITH_DATE_YM_CYCLE_BY_Y";
+    public static final String WITH_DATE_YM_CYCLE_BY_YM = "WITH_DATE_YM_CYCLE_BY_YM";
+    public static final String WITH_DATE_YMD_CYCLE_BY_Y = "WITH_DATE_YMD_CYCLE_BY_Y";
+    public static final String WITH_DATE_YMD_CYCLE_BY_YM = "WITH_DATE_YMD_CYCLE_BY_YM";
+    public static final String WITH_DATE_YMD_CYCLE_BY_YMD = "WITH_DATE_YMD_CYCLE_BY_YMD";
+}
+```
 
+###### UUID
+```
+@Override
+public String next(String generatorId) {
+    UUID uuid = UUID.randomUUID();
+    return uuid.toString().replaceAll("-", "");
+}
 
+@Override
+public String[] nextBatch(String generatorId, int count) {
+    String[] serialNos = new String[count];
+    for (int i = 0; i < count; i++) {
+        serialNos[i] = next(generatorId);
+    }
 
+    return serialNos;
+}
+```
 
+###### NANO_TIME
+```
+@Override
+public String next(String generatorId) {
+    return String.valueOf(System.nanoTime());
+}
+```
 
+###### DEFAULT
+此为默认的策略，即根据 Spring boot yaml 文件中配置的流水号生成器模板（如0000），实现自增的效果（如0001,0002）
 
+1 定义实体类
+
+1.1 流水号游标
+```
+public class SerialNoCursor implements Serializable {
+
+    private String id;
+    private String template;
+    private Long cursorValue;
+    private Date updatedTime;
+    
+    //省略 constructor getter setter
+}
+```
+
+1.2 自增一个的对象
+```
+public class SingleIncreaseBean {
+
+    private String generatorId;
+    private Date updatedTime;
+    
+    //省略 constructor getter setter
+}
+```
+
+1.3 自增一批的对象
+```
+public class BatchIncreaseBean {
+
+    private String generatorId;
+    private Integer count;
+    private Date updatedTime;
+    
+    //省略 constructor getter setter
+}
+```
+
+2 定义流水号游标的 DAO 接口
+```
+public interface SerialNoCursorDao {
+
+    SerialNoCursor findOne(String generatorId);
+    void insertOne(SerialNoCursor serialNoCursor);
+    void increaseSingle(SingleIncreaseBean increaseBean);
+    void increaseBatch(BatchIncreaseBean increaseBean);
+}
+```
+
+2.1 定义所有的实现类型的常量类：
+```
+public class CursorRecordType {
+    public static final String DB_TABLE = "DB_TABLE";
+    public static final String MYBATIS = "MYBATIS";
+    public static final String REDIS = "REDIS";
+}
+```
+
+2.2 以 MYBATIS 的实现为例
+
+2.2.1 定义 Mapper xml 
+```
+<mapper namespace="com.lfzhu.demo.SerialNoCursorMapper">
+    <resultMap id="serialNoMap" type="com.lfzhu.demo.SerialNoCursor">
+        <id column="ID" property="id" jdbcType="VARCHAR" />
+        <result column="TEMPLATE" property="template" jdbcType="VARCHAR" />
+        <result column="CURSOR_VALUE" property="cursorValue" jdbcType="BIGINT" />
+        <result column="UPDATED_TIME" property="updatedTime" jdbcType="DATE" />
+    </resultMap>
+    
+    <select id="findOne" resultMap="serialNoMap" parameterType="java.lang.String">
+        select
+        *
+        from FOWK_SERIAL_NUMBER
+        where ID=#{id}
+    </select>
+
+    <insert id="insertOne" parameterType="com.lfzhu.demo.SerialNoCursor">
+        insert into FOWK_SERIAL_NUMBER(ID,TEMPLATE,CURSOR_VALUE,UPDATED_TIME) values(#{id},#{template},#{cursorValue},#{updatedTime})
+    </insert>
+
+    <update id="increaseSingle" parameterType="com.lfzhu.demo.SingleIncreaseBean">
+        update FOWK_SERIAL_NUMBER
+        set CURSOR_VALUE=CURSOR_VALUE+1,UPDATED_TIME=#{updatedTime}
+        where ID=#{generatorId}
+    </update>
+
+    <update id="increaseBatch" parameterType="group.rober.sql.serialno.model.BatchIncreaseBean">
+        update FOWK_SERIAL_NUMBER
+        set CURSOR_VALUE=CURSOR_VALUE+#{count},UPDATED_TIME=#{updatedTime}
+        where ID=#{generatorId}
+    </update>
+    
+</mapper>
+```
+
+2.2.2 定义 Mapper class
+```
+public interface SerialNoCursorMapper {
+
+    SerialNoCursor findOne(String id);
+
+    void insertOne(SerialNoCursor serialNo);
+
+    void increaseSingle(SingleIncreaseBean increaseBean);
+
+    void increaseBatch(BatchIncreaseBean increaseBean);
+}
+```
+
+2.2.2 定义 SerialNoCursorDao 的实现类
+```
+@Component(CursorRecordType.MYBATIS)
+public class SerialNoCursorDao4Mybatis implements SerialNoCursorDao {
+
+    @Autowired(required = false)
+    SerialNoCursorMapper serialNoCursorMapper;
+
+    @Override
+    public SerialNoCursor findOne(String generatorId) {
+        return serialNoCursorMapper.findOne(generatorId);
+    }
+
+    @Override
+    public void insertOne(SerialNoCursor serialNoCursor) {
+        serialNoCursorMapper.insertOne(serialNoCursor);
+    }
+
+    @Override
+    public void increaseSingle(SingleIncreaseBean increaseBean) {
+        serialNoCursorMapper.increaseSingle(increaseBean);
+    }
+
+    @Override
+    public void increaseBatch(BatchIncreaseBean increaseBean) {
+        serialNoCursorMapper.increaseBatch(increaseBean);
+    }
+}
+```
+
+3 定义根据模板生成流水号的抽象类
+
+3.1 原理：通过数据库的悲观锁来实现。先进行自增，锁定行数据，然后获取自增后的数值，提交后释放锁。批量获取也是同样的原理。
+```
+public abstract class AbstractTemplateGenerator {
+
+    @Autowired
+    SqlProperties sqlProperties;
+
+    @Transactional
+    public String nextSerialNo(String dbGeneratorId, String tplGeneratorId) {
+        SerialNoCursorDao cursorDao = getSerialNoCursorDao();
+        SingleIncreaseBean increaseBean = new SingleIncreaseBean(dbGeneratorId, new Date());
+        cursorDao.increaseSingle(increaseBean);
+
+        String template = getTemplate(tplGeneratorId);
+        SerialNoCursor serialNoCursor = getSerialNoCursor(cursorDao, dbGeneratorId, template, 1);
+        Long cursor = serialNoCursor.getCursorValue();
+        DecimalFormat format = new DecimalFormat(template);//注4
+        String formatSerialNo = format.format(cursor);
+
+        return formatSerialNo;
+    }
+
+    @Transactional
+    public SerialNoCursor increaseBatchAndGetCursor(String dbGeneratorId, String tplGeneratorId,
+                                                    int count) {
+        SerialNoCursorDao cursorDao = getSerialNoCursorDao();
+        BatchIncreaseBean increaseBean = new BatchIncreaseBean(dbGeneratorId, count, new Date());
+        cursorDao.increaseBatch(increaseBean);
+        String template = getTemplate(tplGeneratorId);
+        SerialNoCursor serialNoCursor = getSerialNoCursor(cursorDao, dbGeneratorId, template, count);
+
+        return serialNoCursor;
+    }
+
+    private String getTemplate(String generatorId) {
+        String template = configer.getTemplateMap().get(generatorId);//注1
+        if (StringUtils.isBlank(template)) {
+            template = configer.getDefaultTemplate();//注2
+        }
+        if (StringUtils.isBlank(template)) {
+            throw new RuntimeException("流水号生成器模板不存在,请先配置!");
+        }
+
+        return template;
+    }
+
+    private SerialNoCursorDao getSerialNoCursorDao() {
+        String cursorRecord = configer.getCursorRecord();//注3
+        if (StringUtils.isBlank(cursorRecord)) {
+            throw new RuntimeException("数据存储适配器ID不存在,请先配置!");
+        }
+
+        SerialNoCursorDao cursorDao =
+                ApplicationContextHolder.getBean(cursorRecord, SerialNoCursorDao.class);
+        if (cursorDao == null) {
+            throw new RuntimeException("数据存储适配器不存在,请先配置!适配器ID是[" + cursorRecord + "]");
+        }
+        return cursorDao;
+    }
+
+    private SerialNoCursor getSerialNoCursor(SerialNoCursorDao cursorDao, String generatorId,
+                                             String template, int count) {
+        SerialNoCursor serialNoCursor = cursorDao.findOne(generatorId);
+        if (null == serialNoCursor) {
+            serialNoCursor = new SerialNoCursor();
+            serialNoCursor.setId(generatorId);
+            serialNoCursor.setTemplate(template);
+            serialNoCursor.setCursorValue(Long.valueOf(count));
+            serialNoCursor.setUpdatedTime(new Date());
+            try {
+                cursorDao.insertOne(serialNoCursor);
+            } catch (Exception e) {
+                SingleIncreaseBean increaseBean = new SingleIncreaseBean(generatorId, new Date());
+                cursorDao.increaseSingle(increaseBean);
+                serialNoCursor = cursorDao.findOne(generatorId);
+            }
+        }
+        return serialNoCursor;
+    }
+
+}
+```
+
+3.1.1 代码中的 ‘注1，注2，注3’在 application.yaml 内容如下：
+```
+configer：
+  default-generator: "DEFAULT" #默认流水号生成器
+  default-template: "0000" #默认流水号生成模板
+  cursor-record: "MYBATIS"
+```
+
+3.1.2  代码中的 ‘注4’DecimalFormat 类是 JDK rt包下面的数字格式化类，他可以自动扩展位数。如配置了 0000 的
+模板，当四位数自增至 9999 时，再次加 1 ，自动扩展成五位数，最终的效果是 10000，很灵活方便。
+
+4 DEFAULT 流水号生成器的具体实现
+```
+@Component(GeneratorType.DEFAULT)
+public class WithoutDateGeneratorImpl extends AbstractTemplateGenerator
+        implements SerialNoGenerator<String> {
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String next(String generatorId) {
+        return nextSerialNo(generatorId, generatorId);
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String next(String generatorId, Object object, SerialNoFormatter formatter) {
+        String serialNo = next(generatorId);
+        if (null != formatter) {
+            serialNo = formatter.formatter(serialNo, object);
+        }
+
+        return serialNo;
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String[] nextBatch(String generatorId, int count) {
+        SerialNoCursor serialNoCursor = increaseBatchAndGetCursor(generatorId, generatorId, count);
+        Long cursor = serialNoCursor.getCursorValue();
+        String[] serialNos = new String[count];
+        DecimalFormat decimalFormat = new DecimalFormat(serialNoCursor.getTemplate());
+        int startSeq = cursor.intValue() - count < 0 ? 0 : cursor.intValue() - count;
+        for (int i = 0; i < count; i++) {
+            String formatSerialNo = decimalFormat.format(startSeq + i + 1);
+            serialNos[i] = formatSerialNo;
+        }
+        return serialNos;
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String[] nextBatch(String generatorId, int count, Object object,
+                              SerialNoFormatter formatter) {
+        if (null == formatter) {
+            return nextBatch(generatorId, count);
+        }
+
+        SerialNoCursor serialNoCursor = increaseBatchAndGetCursor(generatorId, generatorId, count);
+        Long cursor = serialNoCursor.getCursorValue();
+        String[] serialNos = new String[count];
+        DecimalFormat decimalFormat = new DecimalFormat(serialNoCursor.getTemplate());
+        int startSeq = cursor.intValue() - count < 0 ? 0 : cursor.intValue() - count;
+        for (int i = 0; i < count; i++) {
+            String formatSerialNo = decimalFormat.format(startSeq + i + 1);
+            formatSerialNo = formatter.formatter(formatSerialNo, object);
+            serialNos[i] = formatSerialNo;
+        }
+
+        return serialNos;
+    }
+}
+```
