feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -27,21 +27,21 @@ tags:
 - 支持不同格式的表现
 
 # 生成策略
-## 无序的流水号
+#### 无序的流水号
 - 通过 uuid 生成
 
-## 有序的流水号
+#### 有序的流水号
 - 通过系统的纳秒生成
 - 通过设定的模板(如0000)自动递增生成：0001,0002,0003
 
-## 有序并且带日期格式的流水号
+#### 有序并且带日期格式的流水号
 - 根据按年/月/日循环自动递增生成:201801010001，201801010002.201801010003，201801020001，201801020002
 
-## 流水号生成后支持重新包装
+#### 流水号生成后支持重新包装
 - 提供后置处理器对生成的流水号二次加工:例如在学生编号前面拼接上其所属导师的编号，TH0001-STD0001，TH0001-STD0002，TH0001-STD0003
 
 # 实现
-## 流水号选择器
+#### 流水号选择器
 流水号选择器是用于根据配置的参数，利用 Spring bean 的自动装配功能，获取对应的流水号生成器（SerialNoGenerator）。
 其中核心代码如下：
 ```
@@ -69,7 +69,7 @@ generator-map:
     "table3.column3": "WITH_DATE_YMD_CYCLE_BY_YMD"
 ```
 
-## 流水号生成器
+#### 流水号生成器
 定义接口，其中有四个方法：包括获取一个、获取一个带回调、获取一批、获取一批带回调
 ```
 public interface SerialNoGenerator<T> {
@@ -433,3 +433,7 @@ public class WithoutDateGeneratorImpl extends AbstractTemplateGenerator
     }
 }
 ```
+
+###### WITH_DATE_xxx_CYCLE_BY_xxx 
+
+
