feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -108,33 +108,42 @@ public class GeneratorType {
 
 ###### UUID
 ```
-@Override
-public String next(String generatorId) {
-    UUID uuid = UUID.randomUUID();
-    return uuid.toString().replaceAll("-", "");
-}
-
-@Override
-public String[] nextBatch(String generatorId, int count) {
-    String[] serialNos = new String[count];
-    for (int i = 0; i < count; i++) {
-        serialNos[i] = next(generatorId);
+@Component(GeneratorType.UUID)
+public class UUIDGeneratorImpl implements SerialNoGenerator<String> {
+    @Override
+    public String next(String generatorId) {
+        UUID uuid = UUID.randomUUID();
+        return uuid.toString().replaceAll("-", "");
     }
-
-    return serialNos;
+    
+    @Override
+    public String[] nextBatch(String generatorId, int count) {
+        String[] serialNos = new String[count];
+        for (int i = 0; i < count; i++) {
+            serialNos[i] = next(generatorId);
+        }
+        return serialNos;
+    }
+    
+    //其它实现方法省略
 }
 ```
 
 ###### NANO_TIME
 ```
-@Override
-public String next(String generatorId) {
-    return String.valueOf(System.nanoTime());
+@Component(GeneratorType.NANO_TIME)
+public class NanoTimeGeneratorImpl implements SerialNoGenerator<String> {
+    @Override
+    public String next(String generatorId) {
+        return String.valueOf(System.nanoTime());
+    }
+    
+    //其它实现方法省略
 }
 ```
 
 ###### DEFAULT
-此为默认的策略，即根据 Spring boot yaml 文件中配置的流水号生成器模板（如0000），实现自增的效果（如0001,0002）
+此为默认的策略，即根据 Spring boot yaml 文件中配置的流水号生成器模板（如 0000），实现自增的效果（如 0001,0002）
 
 1 定义实体类
 
@@ -369,7 +378,7 @@ configer：
   cursor-record: "MYBATIS"
 ```
 
-3.1.2  代码中的 ‘注4’DecimalFormat 类是 JDK rt包下面的数字格式化类，他可以自动扩展位数。如配置了 0000 的
+3.1.2  代码中的 ‘注4’DecimalFormat 类是 JDK rt 包下面的数字格式化类，他可以自动扩展位数。如配置了 0000 的
 模板，当四位数自增至 9999 时，再次加 1 ，自动扩展成五位数，最终的效果是 10000，很灵活方便。
 
 4 DEFAULT 流水号生成器的具体实现
@@ -434,6 +443,191 @@ public class WithoutDateGeneratorImpl extends AbstractTemplateGenerator
 }
 ```
 
-###### WITH_DATE_xxx_CYCLE_BY_xxx 
+###### WITH_DATE_xxx_CYCLE_BY_xxx
+1 概述：
+- WITH_DATE_Y_CYCLE_BY_Y     [年]为前缀，按年循环，格式如: ${DATE}0000, 根据DATE格式化数字，20180001,20180002, 到下一年后四位重新从1开始，20190001,
+- WITH_DATE_YM_CYCLE_BY_Y    [年月]为前缀，按年循环，格式如: ${DATE}0000, 根据DATE格式化数字，2018050001,2018050002, 到下一年后四位重新从1开始，2019010001,
+- WITH_DATE_YM_CYCLE_BY_YM   [年月]为前缀，按月循环，格式如: ${DATE}0000, 根据DATE格式化数字，2018050001,2018050002, 到下一月后四位重新从1开始，2018060001,
+- WITH_DATE_YMD_CYCLE_BY_Y   [年月日]为前缀，按年循环，格式如: ${DATE}0000, 根据DATE格式化数字，201805160001,201805160002, 到下一年后四位重新从1开始，201901010001,
+- WITH_DATE_YMD_CYCLE_BY_YM  [年月日]为前缀，按月循环，格式如: ${DATE}0000, 根据DATE格式化数字，201805160001,201805160002, 到下一月后四位重新从1开始，201806010001,
+- WITH_DATE_YMD_CYCLE_BY_YMD [年月日]为前缀，按日循环，格式如: ${DATE}0000, 根据DATE格式化数字，201805160001,201805160002, 到下一日后四位重新从1开始，201805170001,
+   
+2 实现原理：
+> FOWK_SERIAL_NUMBER 的主键 ID 取值为 generatorId-DateFormat ,如：USER.ID-20180101，根据按年/月/日循环区分。
+这样就能根据按需循环每次生成新的一条记录，游标值从0开始。
+最终获得的流水号格式仍然是根据在 yaml 文件中 generatorId 获取对应的 template（如 ${DATE}0000）， 
+首先根据数据库中的 FOWK_SERIAL_NUMBER 表取到当前的游标值，替换数字部分。
+然后根据是按年/年月/年月日为前缀替换 ${DATE} 部分。
+
+3 定义根据模板生成带日期格式的流水号的抽象类
+```
+public enum DateFormat {
+
+    YMD("yyyyMMdd"), YM("yyyyMM"), Y("yyyy");
+
+    String value;
+
+    DateFormat(String value) {
+        this.value = value;
+    }
+
+    public String desc() {
+        return value;
+    }
+}
+```
+
+```
+public interface WithinDateGenerator extends SerialNoGenerator<String> {
+
+    String getDateFormat();
+
+    String appendDateToGeneratorId(String generatorId);
+}
+```
+
+```
+public abstract class AbstractWithinDateGeneratorImpl extends AbstractTemplateGenerator
+    implements WithinDateGenerator {
+
+    private static final String DATE_SYMBOL = "${DATE}";
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String next(String generatorId) {
+        String dbGeneratorId = appendDateToGeneratorId(generatorId);
+        String formatSerialNo = nextSerialNo(dbGeneratorId, generatorId);
+        formatSerialNo = formatSerialNo.replace(DATE_SYMBOL, getCurFormattedDate());
+
+        return formatSerialNo;
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String next(String generatorId, Object object, SerialNoFormatter formatter) {
+        String serialNo = next(generatorId);
+        if (null != formatter) {
+            serialNo = formatter.formatter(serialNo, object);
+        }
+
+        return serialNo;
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String[] nextBatch(String generatorId, int count) {
+        String dbGeneratorId = appendDateToGeneratorId(generatorId);
+        SerialNoCursor serialNoCursor =
+            increaseBatchAndGetCursor(dbGeneratorId, generatorId, count);
+        Long cursor = serialNoCursor.getCursorValue();
+        String[] serialNos = new String[count];
+        DecimalFormat decimalFormat = new DecimalFormat(serialNoCursor.getTemplate());
+        int startSeq = cursor.intValue() - count < 0 ? 0 : cursor.intValue() - count;
+        for (int i = 0; i < count; i++) {
+            String formatSerialNo = decimalFormat.format(startSeq + i + 1);
+            formatSerialNo = formatSerialNo.replace(DATE_SYMBOL, getCurFormattedDate());
+            serialNos[i] = formatSerialNo;
+        }
+        return serialNos;
+    }
+
+    @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    public String[] nextBatch(String generatorId, int count, Object object,
+        SerialNoFormatter formatter) {
+        if (null == formatter) {
+            return nextBatch(generatorId, count);
+        }
+
+        String dbGeneratorId = appendDateToGeneratorId(generatorId);
+        SerialNoCursor serialNoCursor =
+            increaseBatchAndGetCursor(dbGeneratorId, generatorId, count);
+        Long cursor = serialNoCursor.getCursorValue();
+        String[] serialNos = new String[count];
+        DecimalFormat decimalFormat = new DecimalFormat(serialNoCursor.getTemplate());
+        int startSeq = cursor.intValue() - count < 0 ? 0 : cursor.intValue() - count;
+        for (int i = 0; i < count; i++) {
+            String formatSerialNo = decimalFormat.format(startSeq + i + 1);
+            formatSerialNo = formatter.formatter(formatSerialNo, object);
+            formatSerialNo = formatSerialNo.replace(DATE_SYMBOL, getCurFormattedDate());
+            serialNos[i] = formatSerialNo;
+        }
+
+        return serialNos;
+    }
+
+    @Override
+    public String getDateFormat() {
+        return DateFormat.YMD.desc();
+    }
+
+    @Override
+    public String appendDateToGeneratorId(String generatorId) {
+        return generatorId;
+    }
 
 
+    private String getCurFormattedDate() {
+        return this.format(new Date(), getDateFormat());
+    }
+
+    protected String format(Date date, String format) {
+        SimpleDateFormat dateFormat = new SimpleDateFormat(format);
+        return dateFormat.format(date);
+    }
+}
+```
+
+3.1 以[年]为前缀，按年循环
+```
+@Component(GeneratorType.WITH_DATE_Y_CYCLE_BY_Y)
+public class WithinDateGenerator4YCycleByYImpl extends AbstractWithinDateGeneratorImpl {
+
+    @Override
+    public String getDateFormat() {
+        return DateFormat.Y.desc();
+    }
+
+    @Override
+    public String appendDateToGeneratorId(String generatorId) {
+        return generatorId + "-" + this.format(new Date(), DateFormat.Y.desc());
+    }
+
+}
+```
+
+3.2 [年月]为前缀，按月循环
+```
+@Component(GeneratorType.WITH_DATE_YM_CYCLE_BY_YM)
+public class WithinDateGenerator4YMCycleByYMImpl extends AbstractWithinDateGeneratorImpl {
+
+    @Override
+    public String getDateFormat() {
+        return DateFormat.YM.desc();
+    }
+
+    @Override
+    public String appendDateToGeneratorId(String generatorId) {
+        return generatorId + "-" + this.format(new Date(), DateFormat.YM.desc());
+    }
+}
+```
+
+3.3 [年月日]为前缀，按日循环
+```
+@Component(GeneratorType.WITH_DATE_YMD_CYCLE_BY_YM)
+public class WithinDateGenerator4YMDCycleByYMImpl extends AbstractWithinDateGeneratorImpl {
+
+    @Override
+    public String getDateFormat() {
+        return DateFormat.YM.desc();
+    }
+
+    @Override
+    public String appendDateToGeneratorId(String generatorId) {
+        return generatorId + "-" + this.format(new Date(), DateFormat.YM.desc());
+    }
+}
+```
+
+3.4 其他类型原理一致，重写 `getDateFormat` 和 `appendDateToGeneratorId` 两个方法
