feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -61,7 +61,7 @@ public SerialNoGenerator find(String generatorId) {
     }
 ```
 
-generatorMap 是 Spring boot 配置文件映射出来的 ConfigurationProperties，配置文件 application.yaml 内容如下：
+generatorMap 是 Spring boot 配置文件映射出来的 ConfigurationProperties，配置文件 `application.yaml` 内容如下：
 ```
 generator-map:
     "table1.column1": "DEFAULT"
@@ -83,7 +83,7 @@ public interface SerialNoGenerator<T> {
 }
 ```
 
-其中 SerialNoFormatter 是一个接口类，具体实现按需添加：
+其中 `SerialNoFormatter` 是一个接口类，具体实现按需添加：
 ```
 public interface SerialNoFormatter {
     String formatter(String serialNo, Object object);
@@ -370,7 +370,7 @@ public abstract class AbstractTemplateGenerator {
 }
 ```
 
-3.1.1 代码中的 ‘注1，注2，注3’在 application.yaml 内容如下：
+3.1.1 代码中的 `注1，注2，注3` 在 `application.yaml` 内容如下：
 ```
 configer：
   default-generator: "DEFAULT" #默认流水号生成器
@@ -378,7 +378,7 @@ configer：
   cursor-record: "MYBATIS"
 ```
 
-3.1.2  代码中的 ‘注4’DecimalFormat 类是 JDK rt 包下面的数字格式化类，他可以自动扩展位数。如配置了 0000 的
+3.1.2  代码中的 `注4` DecimalFormat 类是 JDK rt 包下面的数字格式化类，他可以自动扩展位数。如配置了 0000 的
 模板，当四位数自增至 9999 时，再次加 1 ，自动扩展成五位数，最终的效果是 10000，很灵活方便。
 
 4 DEFAULT 流水号生成器的具体实现
@@ -631,3 +631,53 @@ public class WithinDateGenerator4YMDCycleByYMImpl extends AbstractWithinDateGene
 ```
 
 3.4 其他类型原理一致，重写 `getDateFormat` 和 `appendDateToGeneratorId` 两个方法
+
+
+# 测试
+通过多线程测试流水号生成器产出的流水号是否会重复，顺序是否会错乱。
+
+#### 配置文件
+```
+  default-generator: "DEFAULT" #默认流水号生成器
+  default-template: "0000" #默认流水号生成模板
+  cursor-record: "MYBATIS"
+  generator-map:
+    "DEMO.PERSON.PERSON_ID": "DEFAULT"
+  template-map:
+    "DEMO.PERSON.PERSON_ID": "0000"
+```
+
+#### 线程类
+```
+class MyThread implements Runnable {
+
+        @Override
+        public void run() {
+            String generatorId = "DEMO.PERSON.PERSON_ID";
+            int start = 0;
+            while (start < 1000000) {
+                SerialNoGenerator<String> generator = serialNoGeneratorFinder.find(generatorId);
+                String serialNo = generator.next(generatorId);
+                System.out.println("===================serialNo=" + serialNo);
+                start++;
+            }
+        }
+    }
+```
+
+#### 单元测试类
+```
+@Test
+@Rollback
+public void testGetSerialNoMultiThread() throws Exception {
+    MyThread myThread = new MyThread();
+    for (int i = 0; i < 20; i++) {
+        new Thread(myThread, String.valueOf(i)).start();
+    }
+
+    Thread.sleep(1000 * 60);
+}
+```
+
+
+
