feat:update serialNo Generator md file

--- a/_posts/2017-12-07-流水号生成器.md
+++ b/_posts/2017-12-07-流水号生成器.md
@@ -232,7 +232,7 @@ public class CursorRecordType {
         where ID=#{generatorId}
     </update>
 
-    <update id="increaseBatch" parameterType="group.rober.sql.serialno.model.BatchIncreaseBean">
+    <update id="increaseBatch" parameterType="com.lfzhu.demo.BatchIncreaseBean">
         update FOWK_SERIAL_NUMBER
         set CURSOR_VALUE=CURSOR_VALUE+#{count},UPDATED_TIME=#{updatedTime}
         where ID=#{generatorId}
